Fix badge icons in Monobook
In c86a1a5cf, the structure of the badge was changed, and the hack for
hiding the screenreader text in the badge was updated accordingly.
However, the Monobook styles were not updated, and this caused the badge
icons to be positioned off-screen.

Update the Monobook styles for the new badge structure, and use a
different hack for hiding the screenreader text because the one used for
other skins doesn't work in Monobook.

Bug: T226503

--- a/modules/echo.variables.less
+++ b/modules/echo.variables.less
@@ -22,7 +22,6 @@
 @badge-padding: 0.12em;
 @badge-icon-size: 1.1em;
 @badge-distance-adjustment: 1em;
-@badge-offscreen-offset: 1000px;
 
 @notification-item-background-read: #eaecf0;
 
